<?xml version="1.0"?>
<package>
  <name>flypulator_vive_pose</name>
  <version>0.0.0</version>
  <description>flypulator_vive_pose</description>

  <maintainer email="jinyao383@hotmail.com">jinyao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>flypulator_common_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>flypulator_common_msgs</run_depend>

</package>
